Fixed a spacing error

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
 
 .lightBox {
   background-color: rgba(244, 244, 244, 0.6);
-  height: 40vh;
+  height: 42vh;
   z-index: 2; }
 
 .fiveVH {
@@ -22,7 +22,7 @@
 
 .navyBorder {
   border: 10px #08182b solid;
-  height: 30vh; }
+  height: 32vh; }
 
 .headerIcon {
   height: 25px; }
