--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,7 +15,7 @@
 
 .lightBox{
     background-color: rgba(244,244,244,.6);
-    height: 40vh;
+    height: 42vh;
     z-index: 2;
 }
 
@@ -25,7 +25,7 @@
 
 .navyBorder{
     border: 10px $navy solid;
-    height: 30vh;
+    height: 32vh;
 }
 
 .headerIcon{
